--- a/index.html
+++ b/index.html
@@ -541,6 +541,10 @@
                                 <!-- Project Details Go Here -->
                                 <h2>Milan_Afrik Fashion Week</h2>
                                 <p class="item-intro text-muted">Presented By: Afrik Fashion International</p>
+
+                                <div style="width:100%; text-align:left;" ><iframe  src="https://www.eventbrite.com/e/milan-afrik-fashion-week-tickets-34991209650?ref=eweb" frameborder="0" height="1000" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:left;" ><a class="powered-by-eb" style="color: #ADB0B6; text-decoration: none;" target="_blank" href="http://www.eventbrite.com/">Powered by Eventbrite</a></div></div>
+
+
                                 <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
                                 <p>Our theme for the inaugural Milan_Afrik Fashion Week (MAFW) is "Free to Be Me!" We are promoting great fashion and beauty for all shapes, sizes, ages, nationalities and abilities. This event will be a celebration of not only fashion, but life and culture.<br><br>
                                  
