--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </div>
                     <div class="portfolio-caption">
                         <h4>Milan Afrik Fashion Week 2017</h4>
-                        <p class="text-muted">Summer 2017</p>
+                        <p class="text-muted">August 11, 2017</p>
                     </div>
                 </div>
             </div>
@@ -557,6 +557,8 @@
                                     <li>Date: 11-12 August 2017</li>
                                     <li>Location: Central Milan</li>
                                     <li>Ticket Are On Sale Now!</li>
+                                    <li>Event Schedule Available: August 3rd, 2017</li>
+
                                 </ul>
                                 <br>
                                 <br>
