--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="portfolio-caption">
                         <h4>Kat's 3D Printing Training Tour</h4>
-                        <p class="text-muted">Spring/ Summer 2017</p>
+                        <p class="text-muted">Summer/ Fall 2017</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -113,7 +113,7 @@
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
-                        </div>
+                        <!-- </div>
                         <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
                     </div>
                     <div class="portfolio-caption">
@@ -130,8 +130,8 @@
                         </div>
                         <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
                     </div>
-                    <div class="portfolio-caption">
-                        <h4>Milan Afrik Fashion Week 2017</h4>
+                    <div class="portfolio-caption"> -->
+                        <!-- <h4>Milan Afrik Fashion Week 2017</h4>
                         <p class="text-muted">August 11, 2017</p>
                     </div>
                 </div>
@@ -145,9 +145,9 @@
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
-                        </div>
+                        </div>-->
                         <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
-                    </div>
+                    </div> 
                     <div class="portfolio-caption">
                         <h4>Recruitment and Training Services</h4>
                         <p class="text-muted">Initiative</p>
@@ -160,7 +160,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+                        <!-- <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
                     </div>
                     <div class="portfolio-caption">
                         <h4>BirdNews Climate Alliance</h4>
@@ -173,7 +173,7 @@
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
-                        </div>
+                        </div> -->
                         <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
                     </div>
                     <div class="portfolio-caption">
