--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                         <p class="text-muted">Summer/ Fall 2017</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <!-- <div class="col-md-4 col-sm-6 portfolio-item">
                     <div class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
-                        <!-- </div>
+                        </div>
                         <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
                     </div>
                     <div class="portfolio-caption">
@@ -138,14 +138,14 @@
             </div>
 
 
-            <div class="row">
+            <div class="row">-->
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <div class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
-                        </div>-->
+                        </div>
                         <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
                     </div> 
                     <div class="portfolio-caption">
@@ -153,20 +153,20 @@
                         <p class="text-muted">Initiative</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <!-- <div class="col-md-4 col-sm-6 portfolio-item">
                     <div class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <!-- <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+                        <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
                     </div>
                     <div class="portfolio-caption">
                         <h4>BirdNews Climate Alliance</h4>
                         <p class="text-muted">Initiative</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <div class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
                         <div class="portfolio-hover">
