--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
-                        </div> -->
+                        </div>
                         <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
                     </div>
                     <div class="portfolio-caption">
