--- a/index.html
+++ b/index.html
@@ -81,7 +81,45 @@
     </header>
 
 
-<!--  -->
+    <!-- Services -->
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Services</h2>
+                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Educational Training</h4>
+                    <p class="text-muted">We provide cutting edge training and education in digital fabrication and manufacturing innovation. We offer our individualized and industry specific courses to a variety of universities, companies, industry professional as well as the general public.</p>
+                    <p>How may we help your team? <br><a href="#contact">Contact us</a>, for more details.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-cog fa-spin fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Innovative Design and Manufacturing</h4>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Business Development and Management Consultancy</h4>
+                    <p class="text-muted">We target the vital areas that drive business growth. Our network of trusted professionals deliver operational, financial, and sales support to ensure business success for our clients and partners in Africa, Europe, and USA.</p>
+                    <h3 class="section-subheading text-muted"><a href="#contact">Contact Us</a></h3>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Portfolio Grid -->
     <section class="bg-faded" id="portfolio">
@@ -319,7 +357,7 @@
                 <div class="col-sm-6">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-                        <h4>Katherine Scott</h4>
+                        <h4>Katherine Ogueri</h4>
                         <p class="text-muted">Design Innovation Specialist</p>
                         <ul class="list-inline social-buttons">
                             <li class="list-inline-item">
