--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <i class="fa fa-cog fa-spin fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Innovative Design and Manufacturing</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">We specialize in prototyping for the 21st century. By combining traditional craftsmanship and novel digital fabrication methods, we provide cutting edge solutions to today’s manufacturing challenges. Our team specializes in designing 3D modeling, pattern making and construction of apparel, footwear, and accessories.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
